--- a/index.html
+++ b/index.html
@@ -1,19 +1,12 @@
-
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Void Glare</title>
-  <link rel="stylesheet" href="style.css" />
+  <title>Void Eye: Watcher's Domain</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div id="void-eye">
-    <div class="eye-lid"></div>
-    <div class="eye-core"></div>
-  </div>
-  <div id="player"></div>
-  <div id="score">0</div>
-  <script src="script.js"></script>
+  <div id="game">Loading Void Eye Game...</div>
+  <script src="main.js"></script>
 </body>
 </html>
